Fixing a bug where the feature button is beside the header title when the strapline isn't visible.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -652,6 +652,10 @@ footer .widget.profile .twitter span {
   text-align: center;
 }
 
+.widget.feature .feature-btn {
+    display: block;
+}
+
 /* FEATURE TITLE */
 
 .widget.feature h2 {
